Fix vertical alignment issues with entityPrint and icons rendered in scene graph and sidebar header, fix search input to make the scene graph horizontal scroll disappear

--- a/src/style/components.styl
+++ b/src/style/components.styl
@@ -126,6 +126,9 @@
   input.string:focus
     box-shadow none
 
+  .color-widget *
+    vertical-align middle
+
   .color_value
     margin 0 0 0 5px
     width 68px
@@ -134,9 +137,6 @@
 .propertyRowDefined .text
   color #FAFAFA
   font-weight 500
-
-.components *
-  vertical-align middle
 
 #addComponentContainer
   align-items center
@@ -170,7 +170,7 @@
 
 #componentEntityHeader
   .collapsible-header
-    bottom 4px
+    bottom 5px
     position relative
   .collapse-button
     display none
@@ -181,7 +181,6 @@
     padding-left 5px
   .entityName
     max-width 160px
-    top 0
   .entityIcons
     color #FAFAFA
 
@@ -195,4 +194,4 @@
     width 120px
 
 #componentEntityHeader .gltfIcon img
-  top 0
+  top 4px
