--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -224,9 +224,6 @@ body.aframe-inspector-opened
     background $bg
     width 331px
 
-  #sidebar *
-    vertical-align middle
-
   input,
   textarea,
   select
